;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-2.2.11:
  * enhancement: support for SLOT-VALUE and friends has been extended to
    structure and condition instances.
  * minor incompatible change: compiled-function-p is false of
    generic functions.
  * bug fix: type intersections of RATIONAL ranges with (NOT INTEGER) are
    computed more consistently.  (lp#1998008)

changes in sbcl-2.2.11 relative to sbcl-2.2.10:
  * platform support:
    ** arm64: allow the use of CLISP as a build host.  (lp#1996942, reported
       by Andrew Patterson)
  * enhancement: improvements to constraint propagation around comparison
    functions.
  * optimization: conditional move VOPs can work on boxed values and
    produce less consing.
  * optimization: NUNION and UNION are generally faster.
  * bug fix: slot-makunbound-using-class can be redefined without redefining
    the other slot methods.  (lp#1956621, reported by Michał Herda)
  * bug fix: GETHASH on a table created without ":synchronized t" when run
    concurrently in multiple threads could have returned incorrect results.
  * bug fix: build of contributed modules assumed that 'cat' was always
    in /bin/cat on POSIX systems.  (lp#1995224, reported by Kasper Gałkowski)
  * bug fix: INSPECT on an (ARRAY NIL) no longer hangs.  (lp#1995639, reported
    by Michał Herda)
  * bug fix: Fix miscompilation of FILE-STRING-LENGTH when the first argument
    has a known FILE-STREAM type.  (lp#1995881)

changes in sbcl-2.2.10 relative to sbcl-2.2.9:
  * platform support:
    ** win32: improved handling of stack overflow exceptions.  (lp#1302866)
    ** Mac OS X: enforce stronger alignment when building the runtime.
       (lp#1991485, reported by Yan)
    ** arm64: support for building the system without the sb-unicode feature
       (i.e. with 8-bit characters) is restored.
  * bug fix: do not elide the GC store barrier in closures.  (lp#1982608,
    reported by Andrew Berkley)